Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBooleanBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(boolean var)
        if var = true
            output "passed"
        end
    end
end
