Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberBoolObjField.quorum
class Main
    Boolean v
    v:SetValue(true)
    action Main
        Test(v)
    end

    action Test(number var)
    end
end
